--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src='js/leaflet.ajax.min.js'></script>
     <link href='css/style.css' rel='stylesheet' /> 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' /> 
@@ -25,6 +26,18 @@
 //    center: [-76.638565,  3.359889], // starting position [lng, lat]
 //    zoom: 13 // starting zoom
 //});
+
+function getColor(d) {
+    return d > 100 ? '#800026' :
+           d > 50  ? '#BD0026' :
+           d > 30  ? '#E31A1C' :
+           d > 20  ? '#FC4E2A' :
+           d > 15   ? '#FD8D3C' :
+           d > 10   ? '#FEB24C' :
+           d > 5   ? '#FED976' :
+                      '#FFEDA0';
+}
+
 var map = L.map('map').setView([-76.638565, 3.359889], 13);
 var mapboxUrl = 'https://api.mapbox.com/styles/v1/mapbox/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}'
 var accessToken = 'pk.eyJ1IjoiYWx2YXJvYnVlbm8iLCJhIjoiY2pvMWxlYXZhMGJzZzNxa3U4Z2JyMHo3NSJ9.OjR7xwv7mOYZShA59Suykg';
@@ -40,13 +53,56 @@ L.tileLayer(mapboxUrl, {
   //  .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
   //  .openPopup();
 
-var geojsonLayer = new L.GeoJSON.AJAX("comunas-cali.geojson");       
-geojsonLayer.addTo(map);
-
-map.panTo(new L.LatLng(3.359889, -76.638565));
 
 
+map.panTo(new L.LatLng(3.459889, -76.538565));
+var comunas = {};
+
+fetch('formatted_test.csv').then(function(response){
+    return response.text();
+}).then(function(text){
+    // Handling of the text contents goes here
+    for(var i = 0; i < text.split('\n').length-1; i++)
+    {
+        if (i > 0) { // skip first line
+        if(!isNaN(comunas[text.split('\n')[i].split(';')[2]])){
+            comunas[text.split('\n')[i].split(';')[2]]++;
+
+        } else {
+            comunas[text.split('\n')[i].split(';')[2]] = 1;
+        }
+        }
+    }
+    console.log(comunas);
+}).catch(function(err){
+    console.log('error');
+    // Error handling goes here (e.g. the network request failed, etc)
+})
+
+
+
+$.ajax({
+    type: "GET",
+    url: "comunas-cali.geojson",
+    dataType: 'json',
+    success: function (response) {
+
+        geojsonLayer = L.geoJson(response, {
+            
+            style: function (feature) {
+                console.log(feature);
+            return {
+                color: getColor(feature.properties.comuna),
+                fillColor: getColor(feature.properties.comuna),
+                dashArray: '1',
+                fillOpacity: 0.6
+            };
+        }
+        }).addTo(map);
+    }
+});
 
 </script>
 </body>
 </html>
+
