--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,107 +2,49 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>608 Final Project - Education Coverage</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src='js/leaflet.ajax.min.js'></script>
+    <script src='js/leaflet-polygon.fillPattern.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.6/jquery.fancybox.min.js"></script>
     <link href='css/style.css' rel='stylesheet' /> 
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.6/jquery.fancybox.min.css' rel='stylesheet' /> 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' /> 
     <link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css' rel='stylesheet' /> 
-
+    <script>
+        $(document).ready(function() {	
+	    $("a.about_link").fancybox();
+        });
+	
+	
+    </script>
 </head>
 
 <body>
 
     {{{body}}}
 
-<script>
-//mapboxgl.accessToken = 'pk.eyJ1IjoiYWx2YXJvYnVlbm8iLCJhIjoiY2pvMWxlYXZhMGJzZzNxa3U4Z2JyMHo3NSJ9.OjR7xwv7mOYZShA59Suykg';
-//var map = new mapboxgl.Map({
-//    container: 'map', // container id
-//    style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
-//    center: [-76.638565,  3.359889], // starting position [lng, lat]
-//    zoom: 13 // starting zoom
-//});
+<div style="display:none">
+    <div id="about">
+        <h2>About the project</h2>
+        <h4>Author</h4>
+        <p>Alvaro Bueno</p>
+        <h4>Source</h4>
+        <p><em>Source: <a href="https://www.datos.gov.co/Educaci-n/Matricula-en-colegios-del-sector-privado-a-o-2016/n4e3-xd67">Datos Online Colombia</a></em><br />
+        <h4>Methodology</h4>
+        <p> After sourcing data, a summarization and clean-up happened in R (<a href="#">Script</a>) which resulted in a more manageable file for Leaflet, the JS map wrapper.</p>
+        <p>The Conflict Victim refers special attention here, as this is a voluntary assessment and a bureaucratic process combined, in reality it should be bigger than what acutally is marked in the map as some of the victims won't consider themselves as such. the interesting issue here is that these results are coming from private schools. Public schools will give us a better idea of displacement patterns and timelines but the information was not available in this portal or in the Education Department website.</p>
+        <h4>Caveats, Challenges</h4>
+        <p>It was easier to recreate the District areas than to obtain the most exact ones from the GIS city department because it involved a coordinates conversion. The engineers at the GIS department sent me instructions to convert them in arcGIS and other windows software, I ended up using <a href="http://geojson.io/#map=12/3.4189/-76.5229">GeoJson Mapper</a> as it was easier and had some work done by the point i got the responses.</p>
+        <p>There were other interesting colums to explore with but there was no codification for the values anywhere. Again, communication seemed a big issue when the team that produced the data is unavailable and it's not marked correctly. </p>
+        <p>With the 'Conflict Victim' value, there's an easy way to determine the outliers and consider them the 'yes' values, most people in the city will be in the 'no' value.</p>
+        <p>I'm using a Leaflet plugin (leaflet-polygon.fillPattern.js) that allows textures to blend in, to discover that fill and fillColor are mutually exclusive, at least with the usage of this plugin. that's something that it will enhance the color identification experience and will allow more patterns and blend with colors properly.</p>
 
-function getColor(d) {
-    return d > 100 ? '#800026' :
-           d > 50  ? '#BD0026' :
-           d > 30  ? '#E31A1C' :
-           d > 20  ? '#FC4E2A' :
-           d > 15   ? '#FD8D3C' :
-           d > 10   ? '#FEB24C' :
-           d > 5   ? '#FED976' :
-                      '#FFEDA0';
-}
-
-var map = L.map('map').setView([-76.638565, 3.359889], 13);
-var mapboxUrl = 'https://api.mapbox.com/styles/v1/mapbox/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}'
-var accessToken = 'pk.eyJ1IjoiYWx2YXJvYnVlbm8iLCJhIjoiY2pvMWxlYXZhMGJzZzNxa3U4Z2JyMHo3NSJ9.OjR7xwv7mOYZShA59Suykg';
-
-L.tileLayer(mapboxUrl, {
-    id: 'streets-v10',
-    maxZoom: 20,
-    accessToken: accessToken,
-    attribution: '&copy; <a href="https://www.mapbox.com">Mapbox</a>'
-}).addTo(map);
-
-//L.marker([51.5, -0.09]).addTo(map)
-  //  .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
-  //  .openPopup();
-
-
-
-map.panTo(new L.LatLng(3.459889, -76.538565));
-var comunas = {};
-
-fetch('formatted_test.csv').then(function(response){
-    return response.text();
-}).then(function(text){
-    // Handling of the text contents goes here
-    for(var i = 0; i < text.split('\n').length-1; i++)
-    {
-        if (i > 0) { // skip first line
-        if(!isNaN(comunas[text.split('\n')[i].split(';')[2]])){
-            comunas[text.split('\n')[i].split(';')[2]]++;
-
-        } else {
-            comunas[text.split('\n')[i].split(';')[2]] = 1;
-        }
-        }
-    }
-    console.log(comunas);
-}).catch(function(err){
-    console.log('error');
-    // Error handling goes here (e.g. the network request failed, etc)
-})
-
-
-
-$.ajax({
-    type: "GET",
-    url: "comunas-cali.geojson",
-    dataType: 'json',
-    success: function (response) {
-
-        geojsonLayer = L.geoJson(response, {
-            
-            style: function (feature) {
-                console.log(feature);
-            return {
-                color: getColor(feature.properties.comuna),
-                fillColor: getColor(feature.properties.comuna),
-                dashArray: '1',
-                fillOpacity: 0.6
-            };
-        }
-        }).addTo(map);
-    }
-});
-
-</script>
+    </div>
+</div>
 </body>
 </html>
 
