--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,9 +33,10 @@
         <h4>Author</h4>
         <p>Alvaro Bueno</p>
         <h4>Source</h4>
-        <p><em>Source: <a href="https://www.datos.gov.co/Educaci-n/Matricula-en-colegios-del-sector-privado-a-o-2016/n4e3-xd67">Datos Online Colombia</a></em><br />
+        <p><em>Data: <a href="https://www.datos.gov.co/Educaci-n/Matricula-en-colegios-del-sector-privado-a-o-2016/n4e3-xd67" target="_blank">Datos Online Colombia</a></em><br />
+        <p>Code: <a href="https://github.com/delagroove/final608/" target="_blank">Github</a></p>
         <h4>Methodology</h4>
-        <p> After sourcing data, a summarization and clean-up happened in R (<a href="#">Script</a>) which resulted in a more manageable file for Leaflet, the JS map wrapper.</p>
+        <p> After sourcing data, a summarization and clean-up happened in R (<a href="https://github.com/delagroove/final608/blob/master/data_compiler.Rmd" target="_blank">Script</a>) which resulted in a more manageable file for Leaflet, the JS map wrapper.</p>
         <p>The Conflict Victim refers special attention here, as this is a voluntary assessment and a bureaucratic process combined, in reality it should be bigger than what acutally is marked in the map as some of the victims won't consider themselves as such. the interesting issue here is that these results are coming from private schools. Public schools will give us a better idea of displacement patterns and timelines but the information was not available in this portal or in the Education Department website.</p>
         <h4>Caveats, Challenges</h4>
         <p>It was easier to recreate the District areas than to obtain the most exact ones from the GIS city department because it involved a coordinates conversion. The engineers at the GIS department sent me instructions to convert them in arcGIS and other windows software, I ended up using <a href="http://geojson.io/#map=12/3.4189/-76.5229">GeoJson Mapper</a> as it was easier and had some work done by the point i got the responses.</p>
